--- a/templates/kibana.service.j2
+++ b/templates/kibana.service.j2
@@ -11,6 +11,5 @@ respawn
 limit nofile 32768 32768
 
 script
-  exec {{ kibana.install_dir }}/bin/kibana \
-    -c {{ kibana.config_dir }}/config/{{ kibana.config_file }}
+  exec {{ kibana.install_dir }}/bin/kibana  -c {{ kibana.config_dir }}/config/{{ kibana.config_file }}
 end script
