--- a/templates/kibana5.yml.j2
+++ b/templates/kibana5.yml.j2
@@ -44,10 +44,11 @@ elasticsearch.preserveHost: {{ elasticsearch.preserveHost | default('true') }}
 
 # Enables SSL and paths to the PEM-format SSL certificate and SSL key files, respectively.
 # These settings enable SSL for outgoing requests from the Kibana server to the browser.
-#server.ssl.enabled: false
-#server.ssl.certificate: /path/to/your/server.crt
-#server.ssl.key: /path/to/your/server.key
-
+{% if kibana.ssl.enabled %}
+server.ssl.enabled: true
+server.ssl.certificate: {{ kibana.ssl.certificate }}
+server.ssl.key: {{ kibana.ssl.key }}
+{% endif %}
 # Optional settings that provide the paths to the PEM-format SSL certificate and key files.
 # These files validate that your Elasticsearch backend uses the same key files.
 #elasticsearch.ssl.certificate: /path/to/your/client.crt
