--- a/templates/kibana5.yml.j2
+++ b/templates/kibana5.yml.j2
@@ -39,8 +39,13 @@ elasticsearch.preserveHost: {{ elasticsearch.preserveHost | default('true') }}
 # the username and password that the Kibana server uses to perform maintenance on the Kibana
 # index at startup. Your Kibana users still need to authenticate with Elasticsearch, which
 # is proxied through the Kibana server.
+{% if elasticsearch.username and elasticsearch.password %}
+elasticsearch.username: "{{ elasticsearch.username }}"
+elasticsearch.password: "{{ elasticsearch.password }}"
+{% else %}
 #elasticsearch.username: "user"
 #elasticsearch.password: "pass"
+{% endif %}
 
 # Enables SSL and paths to the PEM-format SSL certificate and SSL key files, respectively.
 # These settings enable SSL for outgoing requests from the Kibana server to the browser.
