Use hosts for elasticsearch connection

--- a/templates/kibana5.yml.j2
+++ b/templates/kibana5.yml.j2
@@ -22,6 +22,7 @@ server.host: {{ kibana.host }}
 
 # The URL of the Elasticsearch instance to use for all your queries.
 elasticsearch.url: {{ elasticsearch.url }}
+elasticsearch.hosts: {{ elasticsearch.url }}
 
 # When this setting's value is true Kibana uses the hostname specified in the server.host
 # setting. When the value of this setting is false, Kibana uses the hostname of the host
