--- a/templates/kibana.yml.j2
+++ b/templates/kibana.yml.j2
@@ -35,8 +35,13 @@ elasticsearch.hosts: {{ elasticsearch.url }}
 # used by the Kibana server to perform maintenance on the kibana_index at startup. Your Kibana
 # users will still need to authenticate with Elasticsearch (which is proxied through
 # the Kibana server)
-# elasticsearch.username: "user"
-# elasticsearch.password: "pass"
+{% if kibana_elasticsearch.username and lasticsearch.password %}
+elasticsearch.username: "{{ elasticsearch.username }}"
+elasticsearch.password: "{{ elasticsearch.password }}"
+{% else %}
+#elasticsearch.username: "user"
+#elasticsearch.password: "pass"
+{% endif %}
 
 # SSL for outgoing requests from the Kibana Server to the browser (PEM formatted)
 # server.ssl.cert: /path/to/your/server.crt
