--- a/templates/kibana5.yml.j2
+++ b/templates/kibana5.yml.j2
@@ -39,7 +39,7 @@ elasticsearch.preserveHost: {{ elasticsearch.preserveHost | default('true') }}
 # the username and password that the Kibana server uses to perform maintenance on the Kibana
 # index at startup. Your Kibana users still need to authenticate with Elasticsearch, which
 # is proxied through the Kibana server.
-{% if elasticsearch.username and elasticsearch.password %}
+{% if elasticsearch.username is defined and elasticsearch.password is defined %}
 elasticsearch.username: "{{ elasticsearch.username }}"
 elasticsearch.password: "{{ elasticsearch.password }}"
 {% else %}
