Change the syntax for elasticsearch hosts

--- a/templates/kibana.yml.j2
+++ b/templates/kibana.yml.j2
@@ -14,9 +14,12 @@ server.host: {{ kibana.host }}
 # The maximum payload size in bytes on incoming server requests.
 # server.maxPayloadBytes: 1048576
 
-# The Elasticsearch instance to use for all your queries.
+# The URL of the Elasticsearch instance to use for all your queries.
+{% if kibana.major_version == "6.x" %}
 elasticsearch.url: {{ elasticsearch.url }}
-
+{% else %}
+elasticsearch.hosts: {{ elasticsearch.url }}
+{% endif %}
 # preserve_elasticsearch_host true will send the hostname specified in `elasticsearch`. If you set it to false,
 # then the host you use to connect to *this* Kibana instance will be sent.
 # elasticsearch.preserveHost: true
